[package]
name = "tempo-node"

version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
tempo-alloy = { workspace = true, features = ["tempo-compat"] }
tempo-evm = { workspace = true, features = ["rpc", "engine"] }
tempo-transaction-pool.workspace = true
tempo-chainspec.workspace = true
tempo-consensus.workspace = true
tempo-payload-builder.workspace = true
tempo-payload-types.workspace = true
tempo-precompiles.workspace = true
tempo-primitives = { workspace = true, features = ["default"] }

thiserror.workspace = true

reth-errors.workspace = true
reth-ethereum = { workspace = true, features = ["node", "rpc"] }
reth-primitives-traits = { workspace = true, features = ["secp256k1", "rayon"] }
reth-node-builder.workspace = true
reth-node-core.workspace = true
reth-node-metrics.workspace = true
reth-tracing.workspace = true
reth-provider.workspace = true
reth-transaction-pool.workspace = true
reth-evm.workspace = true
reth-rpc.workspace = true
reth-rpc-eth-api.workspace = true
reth-rpc-builder.workspace = true
reth-node-api.workspace = true
reth-rpc-eth-types.workspace = true
reth-node-ethereum.workspace = true
reth-engine-local.workspace = true

alloy-serde.workspace = true
alloy-eips.workspace = true
alloy-rpc-types-eth.workspace = true
alloy.workspace = true
alloy-primitives.workspace = true

async-trait.workspace = true
clap.workspace = true
commonware-runtime = { workspace = true, features = ["external"] }
eyre.workspace = true
futures.workspace = true
jiff = { workspace = true, features = ["std"] }
reqwest.workspace = true
tokio.workspace = true
url.workspace = true
serde.workspace = true
jsonrpsee.workspace = true

[dev-dependencies]
tempo-e2e.workspace = true
tempo-transaction-pool = { workspace = true, features = ["test-utils"] }
alloy-network.workspace = true
tempo-precompiles.workspace = true
alloy-rpc-types-engine.workspace = true
reth-ethereum = { workspace = true, features = ["node", "test-utils", "pool"] }
reth-e2e-test-utils.workspace = true
reth-node-core.workspace = true
reth-node-metrics.workspace = true
serde_json.workspace = true
tempo-contracts.workspace = true
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
alloy = { workspace = true, features = [
	"full",
	"providers",
	"signers",
	"signer-mnemonic-all-languages",
] }
alloy-rlp.workspace = true
rand.workspace = true
futures.workspace = true
test-case.workspace = true
p256 = { workspace = true, features = ["ecdsa"] }
sha2 = { workspace = true }
base64.workspace = true

[build-dependencies]
vergen.workspace = true
vergen-git2.workspace = true

[features]
default = []
asm-keccak = [
	"alloy/asm-keccak",
	"alloy-primitives/asm-keccak",
	"reth-node-core/asm-keccak",
	"reth-node-ethereum/asm-keccak",
	"tempo-alloy/asm-keccak",
]
otlp = ["reth-ethereum/otlp", "reth-node-core/otlp"]
js-tracer = [
	"reth-ethereum/js-tracer",
	"reth-node-builder/js-tracer",
	"reth-node-ethereum/js-tracer",
	"reth-rpc/js-tracer",
	"reth-rpc-eth-api/js-tracer",
	"reth-rpc-eth-types/js-tracer",
]
jemalloc = [
	"reth-ethereum/jemalloc",
	"reth-node-core/jemalloc",
	"reth-node-metrics/jemalloc",
]
jemalloc-prof = [
	"reth-ethereum/jemalloc-prof",
	"reth-node-metrics/jemalloc-prof",
]
jemalloc-symbols = [
	"jemalloc-prof",
	"reth-ethereum/jemalloc-symbols",
	"reth-node-metrics/jemalloc-symbols",
]

tracy = ["reth-node-core/tracy"]

min-error-logs = ["reth-node-core/min-error-logs"]
min-warn-logs = ["reth-node-core/min-warn-logs"]
min-info-logs = ["reth-node-core/min-info-logs"]
min-debug-logs = ["reth-node-core/min-debug-logs"]
min-trace-logs = ["reth-node-core/min-trace-logs"]
