[package]
name = "tempo-primitives"

version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
tempo-contracts.workspace = true

# Reth
reth-db-api = { workspace = true, optional = true }
reth-ethereum-primitives = { workspace = true, optional = true }
reth-primitives-traits = { workspace = true, optional = true }
reth-codecs = { workspace = true, optional = true }
reth-rpc-convert = { workspace = true, optional = true }

# revm
revm.workspace = true

# Alloy
alloy-consensus = { workspace = true, features = ["k256"] }
alloy-eips.workspace = true
alloy-primitives.workspace = true
alloy-rlp.workspace = true
alloy-serde = { workspace = true, optional = true }
alloy-rpc-types-eth = { workspace = true, optional = true }
alloy-network = { workspace = true, optional = true }

# Utils
arbitrary = { workspace = true, features = ["derive"], optional = true }
derive_more.workspace = true
modular-bitfield = { version = "0.13.1", optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
once_cell = { version = "1.21", default-features = false }

# Cryptography for P256 and WebAuthn signature verification
p256 = { workspace = true, features = ["ecdsa"] }
sha2.workspace = true
base64.workspace = true

[dev-dependencies]
arbitrary.workspace = true
reth-codecs.workspace = true
proptest.workspace = true
proptest-arbitrary-interop.workspace = true
alloy-consensus = { workspace = true, features = ["arbitrary"] }
alloy-primitives = { workspace = true, features = [
	"arbitrary",
	"getrandom",
	"rand",
] }
alloy-signer.workspace = true
alloy-sol-types.workspace = true
alloy-signer-local.workspace = true
rand.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[features]
default = ["std", "reth", "serde", "reth-codec", "serde-bincode-compat", "rpc"]
std = [
	"alloy-consensus/secp256k1",
	"alloy-consensus/std",
	"alloy-eips/std",
	"alloy-primitives/std",
	"alloy-rlp/std",
	"alloy-serde?/std",
	"base64/std",
	"derive_more/std",
	"once_cell/std",
	"p256/std",
	"reth-ethereum-primitives?/std",
	"reth-primitives-traits?/std",
	"revm/std",
	"serde/std",
	"serde_json/std",
	"sha2/std",
	"alloy-sol-types/std",
]
reth = ["dep:reth-ethereum-primitives", "dep:reth-primitives-traits", "serde"]
serde = [
	"dep:alloy-serde",
	"alloy-consensus/serde",
	"reth-primitives-traits?/serde",
	"reth-ethereum-primitives?/serde",
	"alloy-eips/serde",
	"alloy-primitives/serde",
	"reth-codecs?/serde",
	"rand/serde",
	"p256/serde",
	"tracing-subscriber/serde",
	"revm/serde",
	"tempo-contracts/serde"
]
reth-codec = [
	"reth",
	"serde",
	"dep:reth-codecs",
	"dep:reth-db-api",
	"dep:modular-bitfield",
	"reth-ethereum-primitives/reth-codec",
	"reth-codecs/alloy",
	"reth-primitives-traits/reth-codec",
]
serde-bincode-compat = [
	"reth",
	"serde",
	"alloy-consensus/serde-bincode-compat",
	"reth-primitives-traits?/serde-bincode-compat",
	"reth-ethereum-primitives?/serde-bincode-compat",
	"alloy-eips/serde-bincode-compat",
	"alloy-rpc-types-eth?/serde-bincode-compat",
]
arbitrary = [
	"std",
	"dep:arbitrary",
	"serde",
	"alloy-consensus/arbitrary",
	"alloy-primitives/arbitrary",
	"alloy-eips/arbitrary",
	"reth-codecs?/arbitrary",
	"alloy-serde?/arbitrary",
	"reth-ethereum-primitives?/arbitrary",
	"reth-primitives-traits?/arbitrary",
	"alloy-rpc-types-eth?/arbitrary",
	"reth-db-api?/arbitrary",
	"revm/arbitrary",
	"alloy-sol-types/arbitrary",
]
rpc = [
	"reth",
	"reth-ethereum-primitives/rpc",
	"dep:alloy-rpc-types-eth",
	"dep:reth-rpc-convert",
	"dep:alloy-network",
]
